--- a/client/style.css
+++ b/client/style.css
@@ -1,13 +1,101 @@
-/* body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-} */
-
 h1 {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.first {
+  background-color: dodgerblue;
+}
+
+.second {
+  display: inline-block;
+}
+
+body {
+  overflow: hidden;
+}
+
+.space {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .dot {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+  }
+
+  .circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: dodgerblue;
+    position: absolute;
+  }
+
+  & div {
+    position: absolute;
+  }
+}
+
+nav {
+  transition: transform 1s;
+}
+
+.is-active {
+  transform: translateY(100px) rotate(360deg);
+}
+
+.about {
+  transition: all 1s;
+}
+
+.about:hover {
+  background-color: dodgerblue;
+}
+
+.ground {
+  width: 400px;
+  height: 300px;
+  border: 5px solid black;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(70, 167, 70);
+  /* cursor: none; */
+  overflow: hidden;
+}
+
+.ball {
+  /* transition:all 1s; */
+  display: inline-block;
+  pointer-events: none;
+}
+
+.emotion {
+  font-size: 2rem;
+  position: absolute;
+  pointer-events: none;
+}
+
+section {
+  background-color: dodgerblue;
+  padding: 2rem;
+
+  & article {
+    background-color: hotpink;
+    padding: 2rem;
+
+    & p {
+      background-color: orange;
+      padding: 2rem;
+    }
+  }
 }
